[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "2.0.0-alpha.1"
authors = ["Andrew Stanton <refefer@gmail.com>"]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
propagon = { path = "crates/propagon", version = "2.0.0-alpha.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
rand_xoshiro = "0.7"

clap = { version = "4.5", features = ["derive", "wrap_help"] }
indicatif = "0.18"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
lto = "thin"
