[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "2.0.0-alpha.1"
authors = ["Andrew Stanton <refefer@gmail.com>"]
edition = "2024"
# let-chains (used in dataset and CLI code) stabilized in 1.88
rust-version = "1.88"

[workspace.dependencies]
propagon = { path = "crates/propagon", version = "2.0.0-alpha.1" }

serde = { version = "1", features = ["derive"] }
# float_roundtrip: exact f64 parsing, required for byte-identical state files
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "2"
log = "0.4"
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
rand_xoshiro = "0.7"

clap = { version = "4.5", features = ["derive", "wrap_help"] }
indicatif = "0.18"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
lto = "thin"
