[workspace]
resolver = "3"
members = ["crates/*"]
# The client bindings are self-contained sub-workspaces with their own
# Cargo.lock. clients/python pulls in pyo3; clients/wasm pulls in
# cargo-component/wit-bindgen and targets wasm32. Neither must enter the core's
# `cargo *--workspace` builds, so the paths are excluded — keeping all core CI
# invocations free of those toolchains.
exclude = ["clients/python", "clients/wasm"]

[workspace.package]
version = "2.0.0-alpha.1"
authors = ["Andrew Stanton <refefer@gmail.com>"]
edition = "2024"
# let-chains (used in dataset and CLI code) stabilized in 1.88
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Refefer/propagon"
keywords = ["ranking", "bradley-terry", "elo", "glicko2", "pagerank"]
categories = ["algorithms", "science", "mathematics"]

[workspace.dependencies]
propagon = { path = "crates/propagon", version = "2.0.0-alpha.1" }

serde = { version = "1", features = ["derive"] }
# float_roundtrip: exact f64 parsing, required for byte-identical state files
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "2"
log = "0.4"
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
rand_xoshiro = "0.7"

clap = { version = "4.5", features = ["derive", "wrap_help"] }
indicatif = "0.18"

# AGENTS.md rule 7: production code never panics on shape. Tests are exempt
# via `#![cfg_attr(test, allow(...))]` in each lib.rs; integration tests are
# NOT exempt and must propagate errors.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
lto = "thin"
