[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "propagon"
# PEP 440 spelling of the workspace version 2.0.0-alpha.1.
version = "2.0.0a1"
description = "Ranking from revealed preferences: Bradley-Terry, Elo, Glicko-2, PageRank, bandits, and more"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Andrew Stanton", email = "refefer@gmail.com" }]
keywords = ["ranking", "bradley-terry", "elo", "glicko2", "pagerank", "bandits"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/Refefer/propagon"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.maturin]
# Mixed layout: pure-Python package under python/ re-exports the compiled
# extension, which maturin places at python/propagon/_propagon.
python-source = "python"
module-name = "propagon._propagon"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
