[package]
name = "propagon-cli"
description = "Command-line interface for the propagon ranking library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "propagon"
path = "src/main.rs"

[dependencies]
propagon.workspace = true
clap.workspace = true
indicatif.workspace = true
rayon.workspace = true
serde_json.workspace = true
log.workspace = true
