[package]
name = "propagon-cli"
description = "Command-line interface for the propagon ranking library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "propagon"
path = "src/main.rs"

[features]
default = ["parallel"]
# Enable parallel fitting in the propagon library (rayon).
parallel = ["propagon/parallel"]

[dependencies]
propagon.workspace = true
clap.workspace = true
indicatif.workspace = true
rayon.workspace = true
serde_json.workspace = true
log.workspace = true

# AGENTS.md rule 5 option 2: stdout/stderr printing is the CLI's job, so the
# print lints are relaxed for this crate only; the rule-7 denies still apply.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "warn"
